# lmoe

./: .gitignore  LICENSE  README.md  definitions.py  pyproject.toml  pytype.toml  setup.py
docs/: README.md  index.md
docs/documentation/: architecture.md  configuring_lmoe.md  extending_lmoe.md  roadmap.md  utilities.md
docs/examples/: lmoe_plugin_module.py  print_args.py  random_weather.py  say_hi.py
docs/examples/lmoe_plugins/: general_rude.py  random_weather.modelfile.txt  random_weather.py  random_weather_api.py  say_hi.py
docs/scripts/: venv.txt
lmoe/: definitions.py  main.py  release.py
lmoe/api/: base_expert.py  lmoe_query.py  model.py  model_expert.py  ollama_client.py
lmoe/commands/: cleanup.py  command.py  command_runner.py  initialize.py  passthrough.py  print_classification.py  print_classifier_modelfile.py  query.py  refresh.py  version.py
lmoe/experts/: __init__.py  classifier.modelfile.txt  classifier.py  code.py  expert_type.py  general.modelfile.txt  general.py  image.py  list_models.py  personality.py  project_initialization.py  refresh.py
lmoe/experts/templates/: classifier.modelfile.txt  code.modelfile.txt  general.modelfile.txt  image.modelfile.txt  project_initialization.modelfile.txt
lmoe/framework/: config.py  expert_registry.py  lmoe_logger.py  model_registry.py  module_loader.py  native_module.py  ollama_client.py  plugin_module_registry.py
lmoe/templates/: classifier.modelfile.txt  code.modelfile.txt  general.modelfile.txt  personality.examples.yaml  personality.modelfile.txt  project_initialization.modelfile.txt
lmoe/utils/: dict_utils.py  templates.py
tests/integration/: test_classification.py
tests/util/: capture_output.py  real_injector.py
(+3 files in other folders)
