[tool.poetry]
name = "lmoe"
version = "0.2.2"
description = "lmoe (Layered Mixture of Experts,'Elmo') is your programmable CLI assistant."
authors = ["Ryan Eiger <ryebosome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ollama = "^0.1.6"
pyperclip = "^1.8.2"
injector = "^0.21.0"
pytype = "^2024.1.24"
requests = "^2.31.0"
urllib3 = "1.26.15"
PySocks = "^1.7.1"

[tool.poetry.scripts]
lmoe = "lmoe.main:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
