[tool.poetry]
name = "lmoe"
version = "0.3.13"
description = "lmoe (Layered Mixture of Experts,'Elmo') is your programmable CLI assistant."
authors = ["Ryan Eiger <ryebosome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ollama = "^0.1.6"
pyperclip = "^1.8.2"
pytype = "^2024.1.24"
requests = "^2.31.0"
urllib3 = "1.26.15"
PySocks = "^1.7.1"
injector = "^0.21.0"
PyYAML = "^6.0.1"

[tool.poetry.scripts]
lmoe = "lmoe.main:run"
lmoe_update_docs = "lmoe.release:update_readme_version"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
